objects/QIDC__OK_Code_Mapping_ims__c.object
<CustomObject>
    <description>This object holds the mapping information between the OneKey code and country to the SF picklist values.</description>
    <fields>
        <fullName>QIDC__Code_ims__c</fullName>
        <description>OneKey code that will be mapped to the Salesforce picklist value.</description>
        <inlineHelpText>OneKey code that will be mapped to the Salesforce picklist value.</inlineHelpText>
        <label>OneKey Code</label>
        <referenceTo>QIDC__OK_Code_ims__c</referenceTo>
        <relationshipLabel>OneKey Code Mappings</relationshipLabel>
        <relationshipName>OneKey_Code_Mappings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QIDC__Field_Mapping_ims__c</fullName>
        <description>The field ID which this code is mapped to.</description>
        <inlineHelpText>The field ID which this code is mapped to.</inlineHelpText>
        <label>OneKey Field Mapping</label>
        <referenceTo>QIDC__OK_Field_Mapping_ims__c</referenceTo>
        <relationshipLabel>OneKey Code Mappings</relationshipLabel>
        <relationshipName>OneKey_Code_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QIDC__Picklist_Value_ims__c</fullName>
        <description>The Salesforce picklist value that is mapped to the OneKey code.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Salesforce picklist value that is mapped to the OneKey code.</inlineHelpText>
        <label>Picklist Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Record_Type_Name_ims__c</fullName>
        <description>Developer name of the record type to map with the OneKey code.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Developer name of the record type to map with the OneKey code.</inlineHelpText>
        <label>Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>OneKey Code Mapping</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>OneKey Code Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OneKey Code Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>